nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-pod
  template:
    metadata:
      labels:
        app: nginx-pod
    spec:
      containers:
      - name: nginx-container
        image: docker.io/library/mynginx:local
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /var/www/html
          name: my-webserver-pv
      volumes:
      - name: my-webserver-pv
        persistentVolumeClaim:
          claimName: webserver-pvc
