info-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: info-svc
spec:
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  selector:
    app: nginx
