info-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: info-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /info(/|$)(.*)
        backend:
          serviceName: info-svc
          servicePort: 80
